@@ -450,8 +450,6 @@ sub run
 {
     my $self = shift;
 
-    undef $self->{'values'};
-    
     foreach my $collector_type ( @{$self->{'types_sorted'}} )
     {
         next unless $self->{'types_in_use'}{$collector_type};
@@ -471,7 +469,7 @@ sub run
         
         if( defined( $self->{'config_tree'} ) )
         {
-            undef $self->{'config_tree'};
+            delete $self->{'config_tree'};
         }
     }
 
@@ -493,7 +491,7 @@ sub run
 
         if( defined( $self->{'config_tree'} ) )
         {
-            undef $self->{'config_tree'};
+            delete $self->{'config_tree'};
         }        
     }
     
@@ -517,7 +515,7 @@ sub run
 
             if( defined( $self->{'config_tree'} ) )
             {
-                undef $self->{'config_tree'};
+                delete $self->{'config_tree'};
             }
         }
     }
