@@ -60,7 +60,7 @@ sub beforeRun
         Info("Rebuilding monitor cache");
         Debug("Config TS: $actual_ts, Monitor TS: $known_ts");
 
-        undef $data->{'targets'};
+        delete $data->{'targets'};
         $need_new_tasks = 1;
 
         $data->{'db_tokens'} = new Torrus::DB( 'monitor_tokens',
@@ -71,7 +71,7 @@ sub beforeRun
         # explicitly close, since we don't need it often, and sometimes
         # open it in read-only mode
         $data->{'db_tokens'}->closeNow();
-        undef $data->{'db_tokens'};
+        delete $data->{'db_tokens'};
 
         # Set the timestamp
         &Torrus::TimeStamp::setNow($tree . ':monitor_cache');
@@ -101,7 +101,7 @@ sub beforeRun
         $data->{'db_tokens'}->c_close($cursor);
         undef $cursor;
         $data->{'db_tokens'}->closeNow();
-        undef $data->{'db_tokens'};
+        delete $data->{'db_tokens'};
     }
 
     &Torrus::DB::checkInterrupted();
