@@ -1,3 +1,8 @@
+2012-03-07  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* Monitor*.pm, Collector*.pm: undef $hash{$key} is deprecated,
+	replaced with delete
+
 2012-02-16  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/DevDiscover.pm: rrd-create-rra is added to the
